--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.png" type="image/png">
     <title>Shivam Gutgutia Resume</title>
     <style>
         body {
@@ -29,10 +31,12 @@
             z-index: -1; /* Place the PDF behind the body content */
         }
     </style>
+    
+
 </head>
 <body>
     <div id="pdf-container">
-        <embed id="pdf-embed" src="ShivamGutgutiaResume.pdf" type="application/pdf">
+        <embed id="pdf-embed" src="Shivam Gutgutia Resume.pdf" type="application/pdf">
     </div>
 </body>
 </html>
