--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <title>Shivam Gutgutia Resume</title>
     <style>
         body {
@@ -25,18 +25,15 @@
             scroll-behavior: smooth; /* Enable smooth scrolling */
         }
 
-        #pdf-embed {
+        #pdf-object {
             width: 100%;
             height: 100%;
-            z-index: -1; /* Place the PDF behind the body content */
         }
     </style>
-    
-
 </head>
 <body>
     <div id="pdf-container">
-        <embed id="pdf-embed" src="Shivam Gutgutia Resume.pdf" type="application/pdf">
+        <object id="pdf-object" data="Shivam Gutgutia Resume.pdf" type="application/pdf"></object>
     </div>
 </body>
 </html>
